--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
-  "engines":{
+  "engines": {
     "node": "19.x"
   }
 }
